<resources>
    <string name="app_name"> Victor\'s Android Labs </string>
    <string name="hello_message"> Hello World! </string>
    <string name="button_message">I\'m a button</string>
    <string name="editmessage">I\'m an EditText</string>
    <string name="hinttext">Write something here</string>
    <string name="question"> Do you drink coffee? </string>
    <string name="spin_message">Spin flag</string>
    <string name="button">Button</string>
    <string name="button1">Button one</string>
    <string name="button2">Button two</string>
    <string name="button3">Button three\n</string>
    <string name="email">Enter your email address:</string>
    <string name="address">Type email here</string>
    <string name="password">Type your password:</string>
    <string name="word"> Password goes here </string>
    <string name="login">Login</string>
    <string name="call">Call number</string>
    <string name="picture">Change picture</string>
</resources>